--- a/b1001/b1001.vcxproj
+++ b/b1001/b1001.vcxproj
@@ -20,9 +20,9 @@
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
-    <ProjectGuid>{6EDB6D98-20AD-48B8-AD96-208D11BAFB17}</ProjectGuid>
+    <ProjectGuid>{D2F8D843-6012-400D-B072-55312658EFAD}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
-    <RootNamespace>pat</RootNamespace>
+    <RootNamespace>b1001</RootNamespace>
     <WindowsTargetPlatformVersion>10.0.16299.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -139,7 +139,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="b1032.cpp" />
+    <ClCompile Include="b1001.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
