--- a/b1012/b1012.vcxproj
+++ b/b1012/b1012.vcxproj
@@ -20,9 +20,9 @@
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
-    <ProjectGuid>{6EDB6D98-20AD-48B8-AD96-208D11BAFB17}</ProjectGuid>
+    <ProjectGuid>{A67649D6-78FE-43BE-B272-191BF0E28D90}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
-    <RootNamespace>pat</RootNamespace>
+    <RootNamespace>b1012</RootNamespace>
     <WindowsTargetPlatformVersion>10.0.16299.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -139,7 +139,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="b1032.cpp" />
+    <ClCompile Include="b1012.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="Text.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
