--- a/b1018/b1018.vcxproj
+++ b/b1018/b1018.vcxproj
@@ -20,9 +20,9 @@
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
-    <ProjectGuid>{6EDB6D98-20AD-48B8-AD96-208D11BAFB17}</ProjectGuid>
+    <ProjectGuid>{73A4271E-17E5-459D-AD46-7D2699902806}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
-    <RootNamespace>pat</RootNamespace>
+    <RootNamespace>b1018</RootNamespace>
     <WindowsTargetPlatformVersion>10.0.16299.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -139,7 +139,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="b1032.cpp" />
+    <ClCompile Include="源.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="Text.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
